{{$NEXT}}

0.0.18  2021-09-10T10:52:08+12:00
  - Add HTML::Canvas `$.surface` attribute. A multiple page
    PDF can be composed for a Cairo::Surface::PDF surface, by
    creating a canvas per page, reusing the surface. Adjusted
    README examples and tests, which are now a bit easier.

0.0.17  2021-09-08T13:10:04+12:00
  - Add font loading via CSS::Font::Descriptor (@font-face) resources.

0.0.16  2021-05-13T14:12:51+12:00
  - Adjust to CSS::Properties v0.7.0+

0.0.15  2021-05-07T12:14:57+12:00
  - Implement toDataURL() method (PNG format only)

0.0.13  2021-04-29T13:02:29+12:00
  - Improved font cacheing in Cairo backend
  - Adjust to CSS::Properties v0.6.6+

0.0.12  2021-03-09T15:10:03+13:00
  - Fix HTML/JS setDash(@patt) output
  - Use HarfBuzz::Shaper, Cairo::Glyphs and Text::FriBidi for conformant text
    rendering and interpretation of the 'direction' property.
  - Round floating point output in HTML/JS generation. Output to several
    decimal places
  - Fix font restore

Release 0.0.11
- Add Hash::Agnostic role to HTML::Canvas
- Support seperate Path2D objects. Not part of the w3c standard, afaik,
  but implemented by major browsers. For an example, see:
  https://developer.mozilla.org/en-US/docs/Web/API/CanvasRenderingContext2D/fill
Release 0.0.10
- Fix MeasureText test in render-pdf-test-sheets.t
Release 0.0.9
- Rename sources *.pm -> *.rakumod
Release 0.0.8
- Add AT-KEY and AT-STORE methods to approximate Javascript
  associative access, to methods and attributes, e.g.:
      $canvas<scale> = (2.0, 3.0); $canvas<font> = "30px Arial";
Release 0.0.7
- Fix save and restore methods to include lineDash and lineDashOffset
Release 0.0.6
- Provide a fallback font resources/font/FreeMono.ttf for
  missing fonts. Assists with smoke testing and basic installation.
Release 0.0.5
- Fix $.lineDash accessor to be rw for Rakudo 6.d
Release 0.0.4
- Renamed dependency CSS::Declarations -> CSS:Properties
Release 0.0.3